rev 2
+caches
+dialogs
+attaches